--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ code {
   display: inline-block;
 }
 .header .links ul li:first-child::after {
-  content: "\00B7";
-  margin: 0 0.75em;
+  content: '';
+  margin: 0 em;
 }
 .header .links ul li:last-child::after {
   content: '';
